# flightGame

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  buildDesktop.sh
android/app/: CMakeLists.txt  build.gradle
android/app/src/androidTest/java/com/flightgame/alexaut/flightgame/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/flightgame/alexaut/flightgame/: MainActivity.java
android/app/src/main/res/values/: strings.xml
android/app/src/test/java/com/flightgame/alexaut/flightgame/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
assets/: airplane1.json  level1.json
assets/meshes/: ParkHouse.fbx  airplane1.fbx  airplane3.fbx  parkhouse.fbx
assets/shaders/: mesh.vert  postProcess.frag  postProcess.vert  setAlpha1.frag  simpleMeshForward.frag
source/: CMakeLists.txt  main.cpp
source/game/: CMakeLists.txt  airplane.cpp  airplane.hpp  cameraController.cpp  cameraController.hpp  level.cpp  level.hpp  resourceManager.hpp
source/opengl/: CMakeLists.txt  gl.cpp  gl.hpp
source/states/: CMakeLists.txt  gameState.cpp  gameState.hpp
